fix double like issue / can upload blog images
